# InfraGuard

./: .dockerignore  .gitignore  Dockerfile  FORECASTING_IMPLEMENTATION.md  GRAFANA_IMPLEMENTATION.md  IMPLEMENTATION.md  K8S_VALIDATION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  TESTING_IMPLEMENTATION.md  VALIDATION_REPORT.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
HLD/: 01-system-architecture.puml  02-component-interaction-sequence.puml  03-data-flow-architecture.puml  04-ml-pipeline-architecture.puml  05-alert-routing-flow.puml  06-deployment-architecture-kubernetes.puml  07-deployment-architecture-docker-compose.puml  08-class-diagram-core-components.puml  09-forecasting-pipeline.puml  10-monitoring-and-observability.puml  11-security-architecture.puml  12-error-handling-and-resilience.puml  DIAGRAMS_SUMMARY.md  FIXES_APPLIED.md  GENERATION_COMPLETE.md  INDEX.md  QUICK_START.md  README.md
config/: .gitkeep  prometheus.yml  settings.yaml
docker/: Dockerfile.dummy-app  dummy_app.py
documentation/: Infraguard-design.md  README.md  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
grafana/: README.md  infraguard-dashboard.json  provisioning.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  dummy-app-deployment.yaml  prometheus-deployment.yaml  pvc.yaml  secret.yaml
models/: .gitkeep
scripts/: k8s_e2e_validation.ps1  k8s_e2e_validation.sh  run_tests.ps1  run_tests.sh  test_forecasting.py  test_grafana.ps1  test_grafana.sh  train_model.py  validate_system.py
src/: __init__.py  health_server.py  infraguard.py
tests/: README.md  __init__.py  test_data_formatter.py  (+4 more)
(+52 files in other folders)
